# llvmPy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: build.h.in  main.cc
doc/: grammar.txt
lib/: CMakeLists.txt
lib/include/llvmPy/: AST.h  Compiler.h  Instr.h  Lexer.h  Parser.h  Python.h
lib/include/llvmPy/PyObj/: PyBool.h  PyFunc.h  PyObj.h
lib/include/llvmPy/RT/: Call.h  RTScope.h
lib/include/llvmPy/Support/: Testing.h
lib/src/: AST.cc  CompilerImpl.cc  CompilerImpl.h  Emitter.cc  Instr.cc  Lexer.cc  Parser.cc  PythonImpl.cc  PythonImpl.h  RT.cc  Token.cc
lib/src/Compiler/Lexer/: LexerPhase.cc
lib/src/Compiler/Parser/: AstPass.cc
lib/src/Compiler/Runtime/: RuntimePhase.cc
lib/src/PyObj/: PyBool.cc  PyClass.cc  PyFunc.cc  PyObj.cc
lib/src/RT/: Frame.cc  RTScope.cc  Scope.cc
lib/src/Support/: Typed.cc
test/: CMakeLists.txt  EmitterTest.cc  InstrTest.cc  LexerTest.cc  ParserTest.cc  PyObjTest.cc  README.md  TestSuite.cc  TokenizerTest.cc  lit.cfg.py  llvmPyTest.h.in  test-lexer.sh  test_emitter.py  testutil.cc  testutil.h  venv.sh
test/Builtins/bool/: builtin_bool.cc  builtin_bool.py
test/Builtins/fchk/: instr_fchk.cc
test/Builtins/func/: instr_func.cc
test/Builtins/getattr/: instr_getattr.cc
test/Builtins/len/: builtin_len.cc
test/Builtins/print/: builtin_print.py
test/Builtins/str/: builtin_str.cc  builtin_str.py
test/Builtins/truthy/: instr_truthy.cc  instr_truthy.py
test/Compiler/: c-style-name-mangling.py
test/Emitter/: Assign_Int.ll  Assign_Int.py  Assign_Lambda.py  Empty_Module.ll  Empty_Module.py  Literal_Int.py  Literal_None.py  Scope_Hierarchy.py  binop-add-ints.py  binop-int-lte.py  call0.py  call1.ll  call1.py  literal-bool-false.py  literal-bool-true.py  literal-none.py  literal-string.py  print-statement.py  test.sh
test/Emitter/Compound/: if-elif-else.py  if-else.py  while-break.py  while-continue.py  while.py
test/EmitterTest/: Assign_Int.ll  Assign_Lambda.ll  BinOp_Add_Ints.ll  Call0.ll  Empty_Module.ll  Literal_Int.ll  Literal_None.ll  Scope_Hirearchy.ll  call0.ll  call1.ll
test/EmitterTest/BinOp/: Add.1.ll
test/EmitterTest/Call/: Call.0.ll  Call.0.py  call0.ll
test/EmitterTest/ExprDecLit/: ExprDecLit.1.ll
test/EmitterTest/Func/: lambda.0.ll  lambda.0.py
test/EmitterTest/IntLiterals/: IntLiterals.1.ll
test/EmitterTest/Literals/: Int.1.ll  None.ll
test/EmitterTest/Statement/: Assign.1.ll
test/Internals/Closure/: closure-1.py  closure-2.py  closure-3.py  outer-var-ref.py
test/Internals/Frames/: empty-module.py  module-functions.py
test/Lexer/: if-block.py  if-elif-else.py  multiple-statements.py  pass.py  test.sh  while-stmt.py
test/Lexer/Generic/: simple-module.py
test/Options/: file-not-found.py
test/Parser/: ExprParserTest.cc  Parser2Test.cc  func-0.py  func-1.py  test.sh
test/Parser/Compound/: def-func-0.py  def-func-1.py  if-elif-else.py  nested-if-1.py  nested-if-2.py  while-1.py
test/Parser/Expressions/: call-expressions.py
test/Parser/Simple/: pass.py
test/Patterns/Closure/: closure-0.py
test/Python/: binop-compare-ints.py  binop-int-lte.py  binop-mul.py  call-lambda-1-outer-1.py  call-lambda-2-outer-1.py  call-lambda.py  func-add-return.py  func-modify-global.py  if-elif-else-1.py  if-elif-else-2.py  operator-precedence-1.py  operator-precedence.py  simple-add.py  simple-int-literal.py  simple-str-literal.py  test.sh
test/Python/Functions/: return-literal-integer.py
test/Python/Generic/: fibonacci-iterative.py  fibonacci-recursive.py
test/Python/Generic/Fibonacci/: iterative.py  recursive.py
test/Python/Literals/: print-false.py
test/Python/PyObj/: str.py
test/Python/Statements/: if-elif-else-1.py  if-elif-else-2.py  while-1.py  while-continue.py
test/Syntax/Expressions/binary/: add.py
test/Syntax/Expressions/call/: call0.py  call1.py
test/Syntax/Expressions/getattr/: getattr-call.py  getattr-inspect.py  getattr.py
test/Syntax/Statements/assign/: assign-int.py  assign-lambda.py  func-instr-invalidates-frame-ptr.py
test/Syntax/Statements/def/: def-func-1.py
test/Syntax/Statements/if/: if-elif-else-1.py  if-elif-else-3.py  if-elif-else.py  nested-conditionals.py  nested-if-3.py  nested-if-4.py
test/Syntax/Statements/pass/: pass-lexer.py
test/Syntax/Statements/while/: while-1.py  while-break.py  while-continue.py  while-ir.py  while.py
test/Types/PyInt/: literal_PyInt.py
test/Types/PyNone/: literal_PyNone.py  type_PyNone.cc
test/Types/PyStr/: type_PyStr.cc
test/include/: catch2.h  fakeit.h
test/include/llvmPy/Test/: PyObj_DSL.h
test/src/: llvmPyTest.h.in
test/src/Builtins/add/: builtin_add.cc
test/src/Builtins/bool/: builtin_bool.py
test/src/Builtins/getitem/: instr_getitem.cc
test/src/Builtins/int/: builtin_int.cc
test/src/Builtins/none/: builtin_none.cc
test/src/Builtins/str/: builtin_str.cc  builtin_str.py
test/src/Builtins/truthy/: instr_truthy.py
test/src/Internals/AST/: AST_replace.cc  test_CompoundStmt.cc
test/src/Internals/Closure/: outer-var-ref.py
test/src/Internals/Compiler/: c-style-name-mangling.py
test/src/Internals/Lexer/: LexerTest.cc  test_Lexer_utf8.cc
test/src/Internals/Parser/: Parser2Test.cc  Parser4Test.cc  ParserTest.cc
test/src/Options/: command-arg.py  file-not-found.py
test/src/Python/: call-def-2.py  call-lambda-0-outer-1.py  call-lambda-1.py  call-lambda-2.py  simple-add.py  test-parser.sh
test/src/Python/Functions/: implicit-return-none.py
test/src/Python/Literals/: print-none.py  print-true.py
test/src/Python/Statements/: while-break.py
test/src/Syntax/Modules/: multiple-statements.py  simple-module.py
test/src/Types/PyBool/: literal_PyBool_False.py  literal_PyBool_True.py  type_PyBool.cc
test/src/Types/PyInt/: type_PyInt.cc
test/src/Types/PyObj/: test_PyObj.cc
test/src/Types/PyStr/: literal_PyStr.py  type_PyStr.cc  type_PyStr.py
test/src/Types/PyTuple/: literal_PyTuple_0.py  literal_PyTuple_N.py  type_PyTuple.cc
test/tools/: lit-path-test.py  test-ir.sh  test-lexer.sh  test-output.sh  test-parser.sh  test-x86.sh
(+145 files in other folders)
